Close the blank browser window from a download earlier, before showing the helper app dialog (bug 343921).  Patch by marria@gmail.com, r=biesi, sr=darin.